Add external transaction functionality with error handling
- Introduced `create_external_transaction` method in `TransactionsController` to handle deposits and withdrawals between USD and an external currency.
- Implemented `CreateTransaction` service for processing external transactions, including validation and user balance updates.
- Enhanced `ErrorHandlerConcern` to manage new error types related to external transactions.
- Updated routes to include the new external transaction endpoint.
- Added Swagger documentation for external transaction API.
- Created tests for external transaction functionality, ensuring proper error handling and user balance updates.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,7 @@ en:
     transaction_not_found: "Transaction not found"
     invalid_email_or_password: "Invalid email or password"
     error_fetching_btc_price: "Error fetching BTC price"
+    invalid_deposit_currency_pair: "Invalid deposit currency pair. Only USD to External and External to USD are supported."
+    invalid_amount: "Invalid amount. Amount must be positive."
+  external_transactions:
+    success: "External transaction completed successfully."
