--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -7,3 +7,7 @@ es:
     transaction_not_found: "Transacción no encontrada"
     invalid_email_or_password: "Correo electrónico o contraseña inválidos" 
     error_fetching_btc_price: "Error al obtener el precio de BTC"
+    invalid_deposit_currency_pair: "Par de monedas inválido para el depósito. Solo se permite USD a External y External a USD."
+    invalid_amount: "Monto inválido. El monto debe ser positivo."
+  external_transactions:
+    success: "Transacción externa realizada con éxito."
