Add InsufficientBalanceError handling and validation for external transactions
- Introduced `InsufficientBalanceError` class to manage insufficient funds scenarios.
- Enhanced `ErrorHandlerConcern` to handle `InsufficientBalanceError` with appropriate JSON responses.
- Implemented `validate_user_balance!` method in `ValidateTransaction` service to check user balance before processing transactions.
- Updated English and Spanish locale files with messages for insufficient balance errors.
- Added tests to ensure proper error handling for insufficient funds during external transactions.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -38,5 +38,6 @@ en:
     error_fetching_btc_price: "Error fetching BTC price"
     invalid_deposit_currency_pair: "Invalid deposit currency pair. Only USD to External and External to USD are supported."
     invalid_amount: "Invalid amount. Amount must be positive."
+    insufficient_balance: "Insufficient balance"
   external_transactions:
     success: "External transaction completed successfully."
